# DSD-2

./: pyproject.toml  uv.toml
.jupyter/: flake8_config  jupyter_server_config.py  migrated
.jupyter/data/: file_id_manager.db  nbsignatures.db  notebook_secret
.jupyter/data/runtime/: jpserver-1029-open.html  jpserver-1029.json  jpserver-16810-open.html  jpserver-16810.json  jpserver-1849-open.html  jpserver-1849.json  jpserver-24646-open.html  jpserver-24646.json  jpserver-5113-open.html  jpserver-5162-open.html  jpserver-58390-open.html  jpserver-6573-open.html  jpserver-6573.json  jpserver-69385-open.html  jpserver-82602-open.html  jpserver-84275-open.html  jpserver-85857-open.html  jupyter_cookie_secret  kernel-20a5a435-7263-42d4-a625-b8d097902bfa.json  kernel-33fabfc8-1913-4500-bc96-16c7b32f6066.json  kernel-412344cd-9c92-474a-bb00-7377e5e053c0.json  kernel-55e75692-87b7-4829-9857-ee2c9f6d04e3.json  kernel-6435f276-2404-4dfc-994c-10912df75f41.json  kernel-6a9addc0-3b11-4911-9b3d-e82d29b9f7ee.json  kernel-793f487c-238a-4d4d-9990-c92482f9a47a.json  kernel-7df1e534-6eec-401f-ae77-0b580adbe3cb.json  kernel-7e67aab1-e4a3-4a4c-90ed-c2bc1726fc50.json  (+12 more)
.jupyter/labconfig/: page_config.json
.local-libraries/: gennaker_tufte-0.8.3-py3-none-any.whl
.virtual_documents/Files/: 1_ed25519.ipynb  2_ed25519.ipynb  Lindau_talk_1.ipynb  Untitled.ipynb  cryptography 2.ipynb  cryptography.ipynb  dh.ipynb
Files/: Guide for the Accidental Developer.md  cryptography-revised_2.ipynb  cryptography-updated.ipynb  point.ipynb
Pubs/: point.py
(+66 files in other folders)
