[project]
name = "DSD-2"
description = "Updated Content for the course Digital Self-Defense"
authors = [{name ="Paul M Romer", email = "paul@paulromer.net"}]
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "jupyterlab",
    "jupyterlab-spellchecker",
    "jupyterlab-code-formatter",
    "black",
    "isort",
    "jupyterlab-lsp",
    "python-lsp-server[all]>=1.13.1",
    "jupyterlab-quickopen",
    "gennaker-tufte",
    "copykitten",
    "gennaker-tools",
    ]


[tool.gennaker]
name = "Updates for Digital Self-Defense"
collections = [""]


[tool.gennaker.jupyter]
file-browser-limit = "Files"
keyboard-shortcuts = "alt"
interface = "clean"
remove-untitleds = true
debugger = false
status-bar = false
custom-shell-path = ""
always-hidden = [
    'pyproject.toml',
    '.venv',
    '.jupyter',
    '.ipynb_checkpoints',
    '.ropeproject',
    '.local-libraries',
    '__pycache__',
    '*.pyc',
    '*.pyo',
    '.DS_Store',
    '*.so',
    '*.dylib',
    '*~',
    '.ropeproject',
    '.gennaker',
    '.python-version',
    'uv.lock',
    'uv.toml',
]


[tool.gennaker.launcher]
type = "jupyterlab"
